# Cohmira

./: .gitignore  README.md  README_EN.md
boss/: .gitignore  (+5 more)
boss/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
boss/desktop/src-tauri/capabilities/: main.json
boss/desktop/src-tauri/icons/: icon.icns
boss/desktop/src-tauri/src/: db.rs  error.rs  lib.rs  main.rs  server.rs
src/: Cargo.toml  README.md  README_EN.md  config.json.example
src/Plugin/: .mcp.json  README.md  install-native-host.mjs  package.json  pnpm-lock.yaml
src/Plugin/scripts/: build.mjs  verify-build.mjs
src/Plugin/src/: background.js  browserControlBackground.js  manifest.json  pageObserver.js  popup.html  popup.js  settings.html  settings.js  sidepanel.html  sidepanel.js  siteAdapters.js
src/Plugin/src/background/: browserCapabilities.js  browserControlRuntime.js  browserPolicy.js  browserSessionRuntime.js  browserVisibilityRuntime.js  consoleLogRuntime.js  dynamicContentInjection.js  fileChooserRuntime.js  nativeTransport.js  pageAssetRuntime.js  pageExportRuntime.js  pixelInput.js  sidePanelStatus.js  storage.js  tabControlBadge.js  tabGroupManager.js  tabLeaseManager.js  unsupportedCommandRuntime.js  userBrowserState.js
src/Plugin/src/content/: controlBadge.js  cursorOverlay.js  domUtils.js  pageAssetInventory.js
src/builtin-plugins/: .gitignore  PLUGIN_SETTINGS_PROTOCOL.md  README.md
src/builtin-plugins/openmontage/: AGENT_GUIDE.md  PROJECT_CONTEXT.md  README.md  README_zh-CN.md
src/builtin-plugins/openmontage/.plugin/: plugin.json
src/builtin-plugins/openmontage/docs/: AI_SHORT_DRAMA.md
src/builtin-plugins/openmontage/lib/short_drama/: __init__.py  service.py  store.py
src/builtin-plugins/openmontage/mcp/: README.md  VIDEO_AGENT.md  __init__.py  server.py
src/builtin-plugins/openmontage/mcp/apps/: short_drama.html
src/builtin-plugins/openmontage/mcp/src/: __init__.py  openmontage_runner.py
src/builtin-plugins/openmontage/mcp/test/: test_server.py
src/builtin-plugins/openmontage/pipeline_defs/: ai-short-drama.yaml
src/builtin-plugins/openmontage/skills/: INDEX.md  SKILL.md
src/builtin-plugins/openmontage/skills/creative/: video-gen-prompting.md
src/builtin-plugins/openmontage/tests/: test_jiuban_video_runtime.py  test_mcp_server.py  test_short_drama_service.py
src/builtin-plugins/openmontage/tools/: base_tool.py  tool_registry.py
src/builtin-plugins/openmontage/tools/graphics/: image_selector.py  openai_image.py
src/builtin-plugins/openmontage/tools/video/: _shared.py  pexels_video.py  pixabay_video.py  seedance_video.py  video_selector.py  video_stitch.py  video_trimmer.py
src/crates/goose/: Cargo.toml
src/crates/goose-context-core/src/: lib.rs
src/crates/goose/src/: agent_import.rs  document.rs  lib.rs  worktree.rs
src/crates/goose/src/agents/: execute_commands.rs  mcp_client.rs
src/crates/goose/src/config/: permission.rs
src/crates/goose/src/slash_commands/: slash_command.rs
src/crates/goose/tests/: providers.rs
src/crates/mediacrawler/: Cargo.toml
src/crates/mediacrawler/fixtures/: bilibili_search.html
src/crates/mediacrawler/src/: api.rs  lib.rs  login.rs  model.rs  store.rs
src/crates/mediacrawler/src/platform/: bilibili.rs  douyin.rs  kuaishou.rs  mod.rs  tieba.rs  weibo.rs  xhs.rs  zhihu.rs
src/crates/socialconnect/: Cargo.toml
src/crates/socialconnect/examples/: native_check.rs  native_login.rs
src/crates/socialconnect/src/: account.rs  cli.rs  lib.rs  native.rs  schedule.rs
src/crates/yunying-config/: Cargo.toml
src/crates/yunying-config/src/: lib.rs  loader.rs  schema.rs
src/crates/yunying-config/tests/: basic.rs
src/crates/yunying-ops/: Cargo.toml
src/crates/yunying-ops/src/: lib.rs  scenarios.rs  tools.rs  work_params.rs
src/crates/yunying-server/: Cargo.toml
src/crates/yunying-server/src/: goose_bridge.rs  http.rs  lib.rs  runtime.rs  workspace.rs
src/desktop/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts
src/desktop/public/: theme-init.js
src/desktop/scripts/: verify-built-css.mjs
src/desktop/shared/: localAsset.ts  manuscriptFiles.ts  modelCapabilities.ts  modelProfiles.json  redboxVideo.ts
src/desktop/src/: App.tsx  README.md  index.css  main.tsx  themeSemantics.test.ts  types.d.ts
src/desktop/src/bridge/: README.md  ipcRenderer.ts
src/desktop/src/compat/: electronTransport.ts  tauri-core.test.ts  tauri-core.ts
src/desktop/src/components/: ChatComposer.tsx  FirstRunTour.tsx  KnowledgeChatModal.tsx  Layout.tsx  McpAppFrame.tsx  MessageItem.artifacts.test.ts  MessageItem.tsx  ProcessTimeline.tsx  chat-message.css
src/desktop/src/config/: aiSources.ts  startupAnnouncements.ts
src/desktop/src/hooks/: useOfficialAuthLifecycle.ts
src/desktop/src/ipc/: README.md
src/desktop/src/notifications/: actionRouter.ts  policy.ts
src/desktop/src/pages/: Advisors.tsx  Chat.tsx  CoverStudio.tsx  GenerationStudio.tsx  ImageGen.tsx  Knowledge.tsx  Manuscripts.tsx  MediaLibrary.tsx  README.md  RedClaw.tsx  Settings.tsx  Skills.tsx  SocialAccounts.tsx  Subjects.tsx  Wander.tsx  Workboard.tsx
src/desktop/src/remotion/: README.md  Root.tsx
src/desktop/src/runtime/: README.md  runtimeEventStream.ts
src/desktop/src/test/: setup.ts
src/desktop/src/utils/: generationParameterFormatting.test.ts  generationParameterFormatting.ts  pathManager.ts
src/docs/: WINDOWS_OFFLINE_RUNTIME.md
src/scripts/: check.sh  e2e_create_note_mcp.mjs  e2e_employee_ui.mjs  e2e_real_crawl_mcp.mjs  prepare-tauri-build.mjs  prepare-windows-runtime.mjs  tauri-build-lib.mjs  tauri-build-lib.test.mjs  tauri-bundle-config.test.mjs  verify-windows-runtime.mjs  windows-runtime-lib.mjs  windows-runtime.test.mjs
src/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src/src-tauri/capabilities/: main.json
src/src-tauri/installer/windows/: cohmira-installer.nsi
src/src-tauri/runtime/: windows-runtime-manifest.json
src/src-tauri/runtime/ffmpeg/: README.txt
src/src-tauri/runtime/python/: README.txt
src/src-tauri/src/: main.rs
(+269 files in other folders)
