[package]
name = "boss-desktop"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Boss management desktop backend and local development server"

[lib]
name = "boss_core"
path = "src/lib.rs"

[[bin]]
name = "boss-desktop"
path = "src/main.rs"

[[bin]]
name = "boss-server"
path = "src/bin/boss-server.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
csv = "1"
directories = "6"
dotenvy = "0.15"
regex = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
tauri = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
wait-timeout = "0.2"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
