[package]
name = "mediacrawler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "商媒运营助手 · 自媒体平台信息采集（小红书/抖音/B站等），纯 Rust 实现，替代 MediaCrawler Python。"

[lib]
name = "mediacrawler"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true, features = ["json", "cookies"] }
scraper = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "fs", "time"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
regex = { workspace = true, features = ["unicode"] }
once_cell = { workspace = true }
md-5 = { workspace = true }
hex = { version = "0.4", default-features = false, features = ["std"] }
boa_engine = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
serde_json = { workspace = true }
