[package]
name = "socialconnect"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "商媒运营助手 · 纯 Rust 自媒体账号、CDP 浏览器自动化与多平台发布运行时。"

[lib]
name = "socialconnect"
path = "src/lib.rs"

[features]
default = ["cdp"]
# CDP 浏览器后端（chromiumoxide）：真实发布的浏览器自动化。启用后 CdpBrowser 可用。
cdp = ["chromiumoxide", "base64", "futures"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "fs", "time"] }
tracing = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
chromiumoxide = { version = "0.9.1", default-features = false, optional = true }
base64 = { version = "0.22", default-features = false, features = ["std"], optional = true }
futures = { workspace = true, optional = true }
which = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
