[package]
name = "yunying-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "商媒运营助手 · 统一配置加载（config.json 取代 .env），含敏感字段脱敏。"

[lib]
name = "yunying_config"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
